# rustodo

./: .gitignore  Cargo.toml  db_file
src/: action.rs  lib.rs  main.rs  status.rs  todo.rs
src/server/: app.rs
src/storage/: file_storage.rs  mod.rs  storage_trait.rs
